@startuml

title __MEMENTODESIGNPATTERN's Class Diagram__\n

  namespace  {
    interface Caretaker {
    }
  }
  

  namespace  {
    class Driver {
    }
  }
  

  namespace  {
    class GUI {
    }
  }
  

  namespace  {
    interface Memento {
    }
  }
  

  namespace  {
    interface Originator {
    }
  }
  

  namespace  {
    class StudentCaretaker {
    }
  }
  

  namespace  {
    class StudentMemento {
    }
  }
  

  namespace  {
    class StudentOriginator {
    }
  }
  

  GUI -up-|> javax.swing.JFrame
  GUI o-- Caretaker : caretaker
  GUI o-- Originator : originator
  StudentCaretaker .up.|> Caretaker
  StudentMemento .up.|> Memento
  StudentOriginator .up.|> Originator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
